RFC: Encrypted Mmap directory
SPI for Enc Mmap Dir